[tool.poetry]
name = "tsukikage"
version = "0.3.0"
description = "One decorator. Total visibility."
authors = ["Atilio Hector <thehacktour@gmail.com>"]
license = "MIT"
packages = [{ include = "tsukikage" }]
keywords = ["devtools", "decorators", "profiling", "observability", "timer", "timeout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
mkdocs-material = "^9.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=tsukikage --cov-report=term-missing"

[tool.coverage.run]
source = ["tsukikage"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
